[package]
name = "pgcontest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
opt-level=3
# debug=1
overflow-checks=false
# lto=true

[rust]
# debuginfo-level = 1

[dependencies]
ascii = "1.1.0"
rayon = "1.6.0"
