[package]
name = "pgcontest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bench]]
name = "sort_benchmark"
harness = false

[profile.release]
opt-level=3
# debug=1

# [rust]
# debuginfo-level = 1

[dependencies]
ascii = "1.1.0"
crossbeam-channel = "0.5.6"
fxhash = "0.2.1"
linereader = "0.4.0"
rayon = "1.6.0"
simdutf8 = "0.1.4"

[dev-dependencies]
criterion = { version="0.4", features=['html_reports']}

